# ripgrep_2

./: Cargo.toml  licence.txt
src/: main.rs  test.txt  utils.rs
