[package]
name = "ripgrep"
version = "1.1.0"
edition = "2021"
authors = ["inyourface3445", "inyourface3445@gmail.com"]
description = "a simple ripgrep tool that suports regular expressions"
license = "MIT"
license-file = "licence.txt"
documentation = "ripgrep <filepath> <query> -c [enables case sensativity] -r [enables regex]"
homepage = "https://google.com"
repository = ""

[dependencies]
regex = "1.7.1"
